--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Speech to Text</title>
+    <title>Elegant Speech-to-Text</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container">
-        <h1>Speech to Text Converter</h1>
-        <p>Upload an audio file to convert speech to text</p>
+        <h1>Ayush Speech to Text Converter</h1>
+        <p>Upload an audio file to convert speech to text instantly.</p>
 
         <form id="audio-form" enctype="multipart/form-data">
             <input type="file" id="audio-file" name="audio-file" accept="audio/*" required>
